--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,8 @@ h2{
     font-weight: bold;
     color: rgb(90, 113, 128);
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
